upgrade phpdash with laravel 12 and change to opis/closure package to get more performance

--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,9 @@
         }
     ],
     "require": {
-        "jeremeamia/superclosure": "*",
-        "stancl/tenancy": "*"
+        "opis/closure": "^4.3",
+        "stancl/tenancy": "^3.9"
+
     },
     "license": "MIT",
     "autoload": {
