--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.2.5.x-dev"
+            "dev-main": "1.2.5.x-dev"
         },
         "laravel": {
             "providers": [
@@ -42,7 +42,7 @@
             "aliases": {}
         }
     },
-    "version": "1.2.5",
+   
     "minimum-stability": "dev",
     "prefer-stable": true,
     "scripts": {
